prevent textarea wrapping.

--- a/docroot/sites/brand.uiowa.edu/modules/brand_core/css/lockup-preview.css
+++ b/docroot/sites/brand.uiowa.edu/modules/brand_core/css/lockup-preview.css
@@ -45,4 +45,7 @@
 .field--name-field-lockup-primary-unit textarea,
 .field--name-field-lockup-sub-unit textarea {
   resize: none;
+  white-space: pre;
+  overflow-wrap: normal;
+  overflow-x: scroll;
 }
